--- a/src/main/resources/level.fxml
+++ b/src/main/resources/level.fxml
@@ -4,39 +4,39 @@
 <?import javafx.scene.text.*?>
 
 
-<AnchorPane stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
-   <children>
-      <VBox prefHeight="200.0" prefWidth="100.0">
-         <children>
-            <GridPane fx:id="gridPane">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="30.0" vgrow="ALWAYS" />
-               </rowConstraints>
-               <children>
-                  <Text fx:id="livesText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Lives: #" visible="false">
-                     <font>
-                        <Font size="30.0" />
-                     </font>
-                  </Text>
-                  <Text fx:id="scoreText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Score: #" visible="false" GridPane.columnIndex="1" />
-               </children>
-            </GridPane>
-            <StackPane fx:id="root" visible="true">
-                
-                <Text fx:id="startMessage" styleClass="levelMessage" text="Click anywhere to start" />
-                
-                <VBox fx:id="pauseVBox" styleClass="pauseVBox" visible="false">
-                    <Text fx:id="pauseMessage" styleClass="levelMessage" text="Game paused" visible="false" />
-                    <Text fx:id="pauseMessageSub" styleClass="levelMessageSub" text="Press 'p' to continue" visible="false" />
-                </VBox>
-                <Pane fx:id="playFieldLayer" />
-            </StackPane>
-         </children>
-      </VBox>
-   </children>
+<AnchorPane stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8.0.40"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+   <VBox prefHeight="200.0" prefWidth="100.0">
+      <GridPane fx:id="gridPane">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0"
+                               prefWidth="100.0"/>
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="30.0" vgrow="ALWAYS"/>
+         </rowConstraints>
+         <Text fx:id="livesText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0"
+               text="Lives: #" visible="false">
+            <font>
+               <Font size="30.0"/>
+            </font>
+         </Text>
+         <Text fx:id="scoreText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0"
+               text="Score: #" visible="false" GridPane.columnIndex="1"/>
+      </GridPane>
+      <StackPane fx:id="root" visible="true">
+
+         <Text fx:id="startMessage" styleClass="levelMessage" text="Click anywhere to start"/>
+
+         <VBox fx:id="pauseVBox" styleClass="pauseVBox" visible="false">
+            <Text fx:id="pauseMessage" styleClass="levelMessage" text="Game paused"
+                  visible="false"/>
+            <Text fx:id="pauseMessageSub" styleClass="levelMessageSub"
+                  text="Press 'p' to continue" visible="false"/>
+         </VBox>
+         <Pane fx:id="playFieldLayer"/>
+      </StackPane>
+   </VBox>
 </AnchorPane>
 
