--- a/src/test/resources/startscreen.fxml
+++ b/src/test/resources/startscreen.fxml
@@ -1,72 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import java.net.URL?>
-<?import javafx.scene.text.Text?>
-
 <AnchorPane fx:id="root"
-        fx:controller="controller.StartController"
-          xmlns:fx="http://javafx.com/fxml">
-
-   <children>
-       <VBox alignment="CENTER" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
-      <children>
-              <ImageView fx:id="imageView" fitHeight="360" fitWidth="640" layoutX="61.0" layoutY="83.0" pickOnBounds="true" preserveRatio="true">
-                 <image>
-                     <Image url="BubbleBobbleLogo.png" />
-                 </image>
-              </ImageView>
-      
-              <Button fx:id="startButton" styleClass="button" text="Start" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-              <Button fx:id="helpButton" styleClass="button" text="Help" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-              <Button fx:id="exitButton" styleClass="button" text="Exit" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-      </children>
-       </VBox>
-   
-       <GridPane fx:id="helpScreen" visible="false" AnchorPane.bottomAnchor="200" AnchorPane.leftAnchor="200" AnchorPane.rightAnchor="200" AnchorPane.topAnchor="200">
-      <children>
-              <Text styleClass="helpTitleText" text="Help Screen" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="0" GridPane.vgrow="NEVER" />
-              <Text text=" " GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
-              <Text styleClass="helpTextDescription" text="This is the help screen. Here the instructions for the game can be found." GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="2" GridPane.vgrow="NEVER" />
-              <Text styleClass="helpText" text=" " GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS" />
-              <Text styleClass="helpText" text="Left Arrow - Move Left" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.vgrow="ALWAYS" />
-              <Text styleClass="helpText" text="Right Arrow - Move Right" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS" />
-              <Text styleClass="helpText" text="Up Arrow - Jump" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" GridPane.vgrow="ALWAYS" />
-              <Text styleClass="helpText" text="Space Bar - Shoot Bubble" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="7" GridPane.vgrow="ALWAYS" />
-              <Text styleClass="helpText" text="P key - Pause the game" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="8" GridPane.vgrow="ALWAYS" />
-              <Text styleClass="helpText" text="" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="9" GridPane.vgrow="ALWAYS" />
-     		  <Text styleClass="helpTextClick" text="Click to return to the menu." GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="10" GridPane.vgrow="ALWAYS" />
-     			
-      </children>
-         <columnConstraints>
-            <ColumnConstraints />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-            <RowConstraints />
-         </rowConstraints>
-       </GridPane>
-   </children>
+            fx:controller="controller.StartController"
+            xmlns:fx="http://javafx.com/fxml">
 
 
     <stylesheets>
-        <URL value="@stylesheet.css" />
+        <URL value="@stylesheet.css"/>
     </stylesheets>
+    <VBox alignment="CENTER" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0"
+          AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
+        <ImageView fx:id="imageView" fitHeight="360" fitWidth="640" layoutX="61.0"
+                   layoutY="83.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="BubbleBobbleLogo.png"/>
+        </ImageView>
+
+        <Button fx:id="startButton" styleClass="button" text="Start" GridPane.columnIndex="0"
+                GridPane.rowIndex="3"/>
+        <Button fx:id="helpButton" styleClass="button" text="Help" GridPane.columnIndex="0"
+                GridPane.rowIndex="4"/>
+        <Button fx:id="exitButton" styleClass="button" text="Exit" GridPane.columnIndex="0"
+                GridPane.rowIndex="5"/>
+    </VBox>
+
+    <GridPane fx:id="helpScreen" visible="false" AnchorPane.bottomAnchor="200"
+              AnchorPane.leftAnchor="200" AnchorPane.rightAnchor="200"
+              AnchorPane.topAnchor="200">
+        <columnConstraints>
+            <ColumnConstraints/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
+        </rowConstraints>
+        <Text styleClass="helpTitleText" text="Help Screen" GridPane.columnIndex="0"
+              GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="0"
+              GridPane.vgrow="NEVER"/>
+        <Text text=" " GridPane.columnIndex="0" GridPane.halignment="CENTER"
+              GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS"/>
+        <Text styleClass="helpTextDescription"
+              text="This is the help screen. Here the instructions for the game can be found."
+              GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="NEVER"
+              GridPane.rowIndex="2" GridPane.vgrow="NEVER"/>
+        <Text styleClass="helpText" text=" " GridPane.columnIndex="0"
+              GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3"
+              GridPane.vgrow="ALWAYS"/>
+        <Text styleClass="helpText" text="Left Arrow - Move Left" GridPane.columnIndex="0"
+              GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4"
+              GridPane.vgrow="ALWAYS"/>
+        <Text styleClass="helpText" text="Right Arrow - Move Right" GridPane.columnIndex="0"
+              GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5"
+              GridPane.vgrow="ALWAYS"/>
+        <Text styleClass="helpText" text="Up Arrow - Jump" GridPane.columnIndex="0"
+              GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6"
+              GridPane.vgrow="ALWAYS"/>
+        <Text styleClass="helpText" text="Space Bar - Shoot Bubble" GridPane.columnIndex="0"
+              GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="7"
+              GridPane.vgrow="ALWAYS"/>
+        <Text styleClass="helpText" text="P key - Pause the game" GridPane.columnIndex="0"
+              GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="8"
+              GridPane.vgrow="ALWAYS"/>
+        <Text styleClass="helpText" text="" GridPane.columnIndex="0" GridPane.halignment="CENTER"
+              GridPane.hgrow="ALWAYS" GridPane.rowIndex="9" GridPane.vgrow="ALWAYS"/>
+        <Text styleClass="helpTextClick" text="Click to return to the menu."
+              GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS"
+              GridPane.rowIndex="10" GridPane.vgrow="ALWAYS"/>
+
+    </GridPane>
 </AnchorPane>
