--- a/src/main/resources/level.fxml
+++ b/src/main/resources/level.fxml
@@ -16,14 +16,25 @@
 
                         <Text fx:id="startMessage" styleClass="levelMessage" text="Click anywhere to start" />
 
-                        <VBox fx:id="pauseVBox" styleClass="pauseVBox" visible="false">
-                            <children>
-                                <Text fx:id="pauseMessage" styleClass="levelMessage" text="Game paused" visible="false" />
-                                <Text fx:id="pauseMessageSub" styleClass="levelMessageSub" text="Press 'p' to continue" visible="false" />
-                            </children>
-                        </VBox>
-                        <Pane fx:id="playFieldLayer" />
-                  <Button fx:id="returnMenu" mnemonicParsing="false" styleClass="returnToMenuButton" text="Return to Menu" StackPane.alignment="BOTTOM_LEFT" />
+                        <VBox fx:id="pauseVBox" styleClass="pauseVBox" visible="false" />
+                        <Pane fx:id="playFieldLayer">
+                     <children>
+                        <GridPane layoutY="330.0" prefHeight="253.0" prefWidth="832.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                           		<Text fx:id="pauseMessage" styleClass="levelMessage" text="Game paused" visible="false" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER" />
+                                <Text fx:id="pauseMessageSub" styleClass="levelMessageSub" text="Press 'p' to continue" visible="false" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                                <Button fx:id="returnMenu" mnemonicParsing="false" prefHeight="65.0" prefWidth="469.0" text="Click here to return to the menu" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                           </children>
+                        </GridPane>
+                     </children></Pane>
                     </children>
                 </StackPane>
             </children>
