--- a/src/main/resources/level.fxml
+++ b/src/main/resources/level.fxml
@@ -15,26 +15,28 @@
                     <children>
 
                         <Text fx:id="startMessage" styleClass="levelMessage" text="Click anywhere to start" />
+                        <Pane fx:id="playFieldLayer" />
 
-                        <VBox fx:id="pauseVBox" styleClass="pauseVBox" visible="false" />
-                        <Pane fx:id="playFieldLayer">
+                              <VBox fx:id="pauseVBox" styleClass="pauseVBox" visible="false">
+                            <children>
+                                <Text fx:id="pauseMessage" styleClass="levelMessage" text="Game paused" visible="false" />
+                                <Text fx:id="pauseMessageSub" styleClass="levelMessageSub" text="Press 'p' to continue" visible="false" />
+                            </children>
+                        </VBox>
+                  <GridPane fx:id="returnMenuGridPane"  visible="false">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
                      <children>
-                        <GridPane layoutY="330.0" prefHeight="253.0" prefWidth="832.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                           		<Text fx:id="pauseMessage" styleClass="levelMessage" text="Game paused" visible="false" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER" />
-                                <Text fx:id="pauseMessageSub" styleClass="levelMessageSub" text="Press 'p' to continue" visible="false" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                                <Button fx:id="returnMenu" mnemonicParsing="false" prefHeight="65.0" prefWidth="469.0" text="Click here to return to the menu" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                           </children>
-                        </GridPane>
-                     </children></Pane>
+                        <Button fx:id="returnMenu" mnemonicParsing="false" text="Click here to return to the menu" visible="false" />
+                     </children>
+                  </GridPane>
                     </children>
                 </StackPane>
             </children>
@@ -69,7 +71,7 @@
                     </GridPane.margin>
                 </Text>
 
-                                                    <Text fx:id="scoreText" fill="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" text="Score:" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="0">
+                <Text fx:id="scoreText" fill="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" text="Score:" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="0">
                     <GridPane.margin>
                         <Insets right="32.0" />
                     </GridPane.margin>
