--- a/src/main/resources/level.fxml
+++ b/src/main/resources/level.fxml
@@ -23,18 +23,18 @@
                                 <Text fx:id="pauseMessageSub" styleClass="levelMessageSub" text="Press 'p' to continue" visible="false" />
                             </children>
                         </VBox>
-                  <GridPane fx:id="returnMenuGridPane"  visible="false">
+                  <GridPane fx:id="returnMenuGridPane" visible="false">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Button fx:id="returnMenu" mnemonicParsing="false" text="Click here to return to the menu" visible="false" />
+                        <Button fx:id="returnMenu" mnemonicParsing="false" text="Click here to return to the menu" visible="false" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
                      </children>
                   </GridPane>
                     </children>
